--- a/main.html
+++ b/main.html
@@ -1,1 +1,13 @@
 <!-- Add your solution to this file -->
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js"></script>
+    <h1>Acciojob</h1>
+  </body>
+</html>
